<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sander.debijbel.ChoiceListActivity">

    <TextView
        android:textColor="#0099CC"
        android:textSize="39sp"
        android:text="@string/kies_hier_verhaal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/creation"
        android:textSize="13sp"
        android:textColor="#CC0000"
        android:layout_width="140sp"
        android:layout_height="60sp" />
    <Button
        android:text="@string/come_of_sin"
        android:textSize="13sp"
        android:textColor="#CC0000"
        android:layout_width="140sp"
        android:layout_height="60sp" />
    <Button
        android:text="@string/jacob_and_esau"
        android:textSize="13sp"
        android:textColor="#CC0000"
        android:layout_width="140sp"
        android:layout_height="60sp" />
    <Button
        android:text="@string/the_ark"
        android:textSize="13sp"
        android:textColor="#CC0000"
        android:layout_width="140sp"
        android:layout_height="60sp" />
    <Button
        android:text="@string/david_and_goliath"
        android:textSize="12sp"
        android:textColor="#CC0000"
        android:layout_width="140sp"
        android:layout_height="60sp" />

</LinearLayout>
